vllm-deploy-tpu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vllm-tpu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vllm-tpu
  template:
    metadata:
      labels:
        app: vllm-tpu
      #annotations:
      #  gke-gcsfuse/volumes: "true"
      #  gke-gcsfuse/cpu-limit: "0"
      #  gke-gcsfuse/memory-limit: "0"
      #  gke-gcsfuse/ephemeral-storage-limit: "0"
    spec:
      #serviceAccountName: KSA_NAME
      nodeSelector:
        cloud.google.com/gke-tpu-topology: 2x4
        cloud.google.com/gke-tpu-accelerator: tpu-v6e-slice
      tolerations:
               - key: "google.com/tpu"
                 operator: "Exists"
                 effect: "NoSchedule"
      containers:
      - name: vllm-tpu
        image: vllm/vllm-tpu:latest
        command: ["python3", "-m", "vllm.entrypoints.openai.api_server"]
        args:
        - --host=0.0.0.0
        - --port=8000
        - --tensor-parallel-size=8
        - --max-model-len=4096
        - --model=unsloth/gpt-oss-20b-BF16
        #- --model=openai/gpt-oss-20b
        - --max-num-batched-tokens=512
        - --max-num-seqs=128
        - --dtype=bfloat16
        - --enable-expert-parallel
        ports:
        - containerPort: 8000
        resources:
          limits:
            google.com/tpu: 8
        readinessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10
        volumeMounts:
        #- name: gcs-fuse-csi-ephemeral
        #  mountPath: /data
        - name: dshm
          mountPath: /dev/shm
      volumes:
      - name: gke-gcsfuse-cache
        emptyDir:
          medium: Memory
      - name: dshm
        emptyDir:
          medium: Memory
      #- name: gcs-fuse-csi-ephemeral
      #  csi:
      #    driver: gcsfuse.csi.storage.gke.io
      #    volumeAttributes:
      #      bucketName: GSBUCKET
      #
