vllm-inference-kimi3.yaml
apiVersion: v1
kind: Service
metadata:
  name: sglang-kimi-k3-master
  namespace: default
  labels:
    app: distributed-sglang-kimi-k3
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: distributed-sglang-kimi-k3
    apps.kubernetes.io/pod-index: "0"
  ports:
  - name: dist-port
    port: 20000
    targetPort: 20000
---
apiVersion: v1
kind: Service
metadata:
  name: sglang-kimi-k3-serving
  namespace: default
  labels:
    app: distributed-sglang-kimi-k3
spec:
  type: NodePort
  selector:
    app: distributed-sglang-kimi-k3
    apps.kubernetes.io/pod-index: "0"
  ports:
  - name: http-inference
    port: 30000
    targetPort: 30000
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: distributed-sglang-kimi-k3
  namespace: default
  labels:
    app: distributed-sglang-kimi-k3
spec:
  replicas: 4
  selector:
    matchLabels:
      app: distributed-sglang-kimi-k3
  serviceName: "sglang-kimi-k3-master"
  template:
    metadata:
      labels:
        app: distributed-sglang-kimi-k3
        inference.networking.k8s.io/engine-type: sglang
      annotations:
        networking.gke.io/default-interface: 'eth0'
        kueue.x-k8s.io/podset-required-topology: "cloud.google.com/gce-topology-subblock"
    spec:
      restartPolicy: Always
      serviceAccountName: sglang-sa
      hostNetwork: true
      hostIPC: true
      dnsPolicy: ClusterFirstWithHostNet
      nodeSelector:
        cloud.google.com/gke-nodepool: a4x-highgpu-4g-a4x-pool
      tolerations:
      - key: nvidia.com/gpu
        operator: Equal
        value: present
        effect: NoSchedule
      - key: kubernetes.io/arch
        operator: Equal
        value: arm64
        effect: NoSchedule
      #- key: broken-dra
      #  operator: Exists
      #  effect: NoSchedule
      resourceClaims:
      - name: compute-domain-channel
        resourceClaimTemplateName: kimi-k3-compute-domain-channel
      #- name: rdma
      #  resourceClaimTemplateName: default-rdma
      containers:
      - name: sglang-container
        image: lmsysorg/sglang:dev-cu13
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
          capabilities:
            add: ["IPC_LOCK", "SYS_PTRACE", "NET_ADMIN"]
        command:
        - /bin/bash
        - -c
        args:
        - |
          [...]
        resources:
          limits:
            nvidia.com/gpu: "4"
          requests:
            nvidia.com/gpu: "4"
          claims:
          - name: compute-domain-channel
          #- name: rdma
        volumeMounts:
        - name: nvidia
          mountPath: /usr/local/nvidia
        - name: gib
          mountPath: /usr/local/gib
        - name: dshm
          mountPath: /dev/shm
        - name: hf-cache
          mountPath: /root/.cache/huggingface
      volumes:
      - name: gib
        hostPath:
          path: /home/kubernetes/bin/gib
      - name: nvidia
        hostPath:
          path: /home/kubernetes/bin/nvidia
      - name: lib64
        hostPath:
          path: /lib64
      - name: dshm
        emptyDir:
          medium: Memory
          sizeLimit: 250Gi
      - name: hf-cache
        emptyDir: {}
