vllm-deploy-a4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vllm-server
  labels:
    app: vllm-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vllm-inference-server
  template:
    metadata:
      labels:
        app: vllm-inference-server
    spec:
      volumes:
       - name: library-dir-host
         hostPath:
              path: /home/kubernetes/bin/nvidia
       - name: gib
         hostPath:
              path: /home/kubernetes/bin/gib
       - name: cache
         emptyDir: {}
       - name: models
         emptyDir: {}
       - name: dshm
         emptyDir:
              medium: Memory
      nodeSelector:
         cloud.google.com/gke-accelerator:  nvidia-b200
         #cloud.google.com/gke-spot: "true"
      tolerations: 
      - key: "nvidia.com/gpu"
        operator: "Exists"
        effect: "NoSchedule"
      serviceAccountName: vllm
      containers:
        - name: vllm-inference-server
          image: vllm/vllm-openai:nightly
          imagePullPolicy: IfNotPresent
          securityContext:
                privileged: true
          resources:
            limits:
              nvidia.com/gpu: 8
          command:
              - bash
              - -xc
              - |
               apt install -y wget 
               wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2404/x86_64/cuda-keyring_1.1-1_all.deb
               dpkg -i cuda-keyring_1.1-1_all.deb
               apt update
               apt install -y libnccl2=2.28.9-1+cuda13.0 libnccl-dev=2.28.9-1+cuda13.0
               source /usr/local/gib/scripts/set_nccl_env.sh
               export LD_LIBRARY_PATH=/usr/lib/x86_64-linux-gnu/:/usr/local/gib/lib64:/usr/local/nvidia/lib64:$LD_LIBRARY_PATH
               hf auth login --token $HUGGING_FACE_HUB_TOKEN ;
               hf download MiniMaxAI/MiniMax-M2.5 --local-dir /models 
               SAFETENSORS_FAST_GPU=1 vllm serve /models \
               --port 8888 --tensor-parallel-size=8 --gpu-memory-utilization 0.95 \
               --max-model-len 2248 --block-size=32 --kv-cache-dtype fp8 --stream-interval 20 \
               --no-enable-prefix-caching --trust-remote-code 
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: library-dir-host
              mountPath: /usr/local/nvidia
            - name: gib
              mountPath: /usr/local/gib
            - mountPath: /dev/shm
              name: dshm
            - mountPath: /.cache
              name: cache
            - mountPath: /models
              name: models

---
apiVersion: v1
kind: Service
metadata:
  name: vllm-inference-server
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    #cloud.google.com/backend-config: '{"default": "vllm-backendconfig"}'
  labels:
    app: vllm-inference-server   
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: http
      name: http-inference-server
    
  selector:
    app: vllm-inference-server

---
#apiVersion: cloud.google.com/v1
#kind: BackendConfig
#metadata:
#  name: vllm-backendconfig
#spec:
  # gRPC healthchecks not supported, use http endpoint instead https://cloud.google.com/kubernetes-engine/docs/how-to/ingress-configuration#direct_health
#  healthCheck:
#    checkIntervalSec: 15
#    timeoutSec: 15
#    healthyThreshold: 1
#    unhealthyThreshold: 2
#    type: HTTP                      # GKE Ingress controller only supports HTTP, HTTPS, or HTTP2
#    requestPath: /health   # Not a real endpoint, but should work (via prometheus metrics exporter)
#    port: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vllm-ingress
  annotations:
    kubernetes.io/ingress.class: "gce-internal"
    #kubernetes.io/ingress.global-static-ip-name: "ingress-vllm"
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: vllm-inference-server
            port:
              number: 8000
